# Justprojects

./: .gitignore  .gitpod.yml  404.html  Cargo.toml  README.md  index.html  print.html  publickey.txt  pyproject.toml  renovate.json  searchindex.js  searchindex.json  simple.html
.github/workflows/: advisiores.yml  build.yml  docsbuild.yml
projects/Random me/: main.py
projects/random-me/: main.py
src/: main.rs
web/: book.toml
web/src/: SUMMARY.md  main.md  simple.md
