[package]
name = "misile-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
self_update = { git = "https://github.com/jaemk/self_update", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }